<resources>
    <string name="app_name">Golubeva-v-24</string>
    <string name="Messendger">МЕССЕНДЖЕР</string>
    <string name="todo">TODO</string>
    <string name="Pass">ПАРОЛЬ</string>
    <string name="todo1">TODO</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="Passw">ПАРОЛЬ</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="mysms">МОИ СООБЩЕНИЯ</string>
    <string name="todo9">TODO</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="todo20">TODO</string>
    <string name="Hi">Привет! Как\n дела? Дав...</string>
    <string name="ox">Ой, у меня всё\n отлично! Ты...</string>
    <string name="Listen">Слушай, Саш, \n ты не мог б...</string>
    <string name="togd">Тогда\n договорили...</string>
    <string name="todo12">TODO</string>
    <string name="todo13">TODO</string>
    <string name="todo14">TODO</string>
    <string name="todo15">TODO</string>
</resources>